--- a/feiji/7.22/game.html
+++ b/feiji/7.22/game.html
@@ -19,6 +19,7 @@
         <script src='scene/main/ball.js'></script>
         <script src='scene/main/block.js'></script>
         <script src='scene/main/player.js'></script>
+        <script src='scene/main/enemy.js'></script>
         <script src='scene/main/scene.js'></script>
         <!-- 结束和标题场景 -->
         <script src='scene/end/scene_end.js'></script>
